# Flight-Route-Optimization-System

./: .gitignore  README.md  package-lock.json  package.json  server.js  vercel-build.js  vercel.json
cpp/: CMakeLists.txt  Dijkstra.cpp  Dijkstra.h  Graph.cpp  Graph.h  build.bat  main.cpp  shortest_path.json
web-app/: next.config.js  now.json  package-lock.json  package.json  vercel-build.js
web-app/public/: airports.json  graph.json  index.html
web-app/src/: App.css  App.js  index.css  index.js
web-app/src/components/: AStarVisualization.jsx  AlgorithmSelector.jsx  AlgorithmSettingsPanel.jsx  AlgorithmVisualization.jsx  AnimationControls.jsx  EdgeDetailsModal.css  EdgeDetailsModal.jsx  GraphCanvas.jsx  Grid.css  Grid.jsx  PlaneAnimation.jsx  Toast.jsx  Tooltip.jsx
web-app/src/hooks/: useGraphData.js  useToast.js
web-app/src/styles/: AlgorithmSelector.css  AlgorithmSettingsPanel.css  AnimationControls.css  DijkstraVisualizer.css  GraphCanvas.css  Grid.css  HeuristicVisualization.css  Toast.css  Tooltip.css
web-app/src/utils/: projection.js
web-app/src/utils/graph/: Graph.js  astar.js  dijkstra.js  index.js
